6267 | 21 files | M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/cfg/valve_builds.kv3,  M game/citadel/pak01_dir/panorama/layout/citadel_hero_stats_weapon_panel.xml,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_gun.css,  M game/citadel/pak01_dir/panorama/styles/citadel_hero_stats_weapon_panel.css,  M game/citadel/pak01_dir/panorama/styles/hud.css,  M game/citadel/pak01_dir/panorama/styles/hud_modifiers.css,  M game/citadel/pak01_dir/panorama/styles/hud_modifiers_center.css,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/pak01_dir/soundevents/generated_vo_hero_pick_vo.vsndevts,  M game/citadel/resource/localization/citadel_gc/citadel_gc_english.txt,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/resource/localization/citadel_main/citadel_main_english.txt,  M game/citadel/steam.inf, ?? ga
https://steamdb.info/patchnotes/21856065/

--- a/game/citadel/pak01_dir/panorama/layout/citadel_hero_stats_weapon_panel.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_hero_stats_weapon_panel.xml
@@ -36,6 +36,9 @@
 					<Panel class="RangeArrow" />
 					<Panel id="WeaponMaxRangeContainer" />
 				</Panel>
+				<Panel id="NAWeaponRangeContainer" class="LeftRightFlow">
+					<Label id="NAWeaponRangeLabel" text="#CitadelHeroStats_Weapon_Falloff_NA" />
+				</Panel>
 			</Panel>
 		</Panel>
 		<Panel id="WeaponDisplayStats" class="displayStatsContainer">
