--- a/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_gun.css
+++ b/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_gun.css
@@ -1573,3 +1573,93 @@
 	visibility: collapse;
 }
 
+.celeste .crosshair__pip--black
+{
+	visibility: collapse;
+}
+
+.celeste #TopPip
+{
+	background-image: url("s2r://panorama/images/hud/crosshair/reticle_unicorn_armlarge_psd.vtex");
+	background-size: 100% 100%;
+	background-img-opacity: 1.0;
+	background-color: white;
+	background-color-opacity: 0.0;
+	border: 0px;
+	min-width: 96px;
+	min-height: 96px;
+	max-width: 96px;
+	max-height: 96px;
+	ui-scale: 100%;
+}
+
+.celeste #LeftPip
+{
+	background-image: url("s2r://panorama/images/hud/crosshair/reticle_unicorn_armlarge_psd.vtex");
+	background-size: 100% 100%;
+	background-img-opacity: 1.0;
+	background-color: white;
+	background-color-opacity: 0.0;
+	border: 0px;
+	min-width: 96px;
+	min-height: 96px;
+	max-width: 96px;
+	max-height: 96px;
+	ui-scale: 100%;
+}
+
+.celeste #RightPip
+{
+	background-image: url("s2r://panorama/images/hud/crosshair/reticle_unicorn_armsmall_psd.vtex");
+	background-size: 100% 100%;
+	background-img-opacity: 1.0;
+	background-color: white;
+	background-color-opacity: 0.0;
+	border: 0px;
+	min-width: 96px;
+	min-height: 96px;
+	max-width: 96px;
+	max-height: 96px;
+	ui-scale: 100%;
+}
+
+.celeste #BottomPip
+{
+	background-image: url("s2r://panorama/images/hud/crosshair/reticle_unicorn_armsmall_psd.vtex");
+	background-size: 100% 100%;
+	background-img-opacity: 1.0;
+	background-color: white;
+	background-color-opacity: 0.0;
+	border: 0px;
+	min-width: 96px;
+	min-height: 96px;
+	max-width: 96px;
+	max-height: 96px;
+	ui-scale: 100%;
+}
+
+.celeste .crosshair__dot
+{
+	opacity: 1;
+	background-image: url("s2r://panorama/images/hud/crosshair/reticlecenter_unicorn_psd.vtex");
+	background-size: 100% 100%;
+	background-img-opacity: 1.0;
+	background-color: white;
+	background-color-opacity: 0.0;
+	min-width: 64px;
+	min-height: 64px;
+	max-width: 64px;
+	max-height: 64px;
+	ui-scale: 200%;
+}
+
+.celeste .crosshair__dotborder
+{
+	visibility: collapse;
+}
+
+.celeste .crosshair__pipborder
+{
+	visibility: collapse;
+}
+
