6280 | 39 files | M Protobufs/citadel_gcmessages_client.proto,  M game/bin/win64/assetpreview_strings.txt,  M game/bin/win64/engine2_strings.txt,  M game/bin/win64/localize_strings.txt,  M game/bin/win64/panorama_strings.txt,  M game/bin/win64/panorama_text_pango_strings.txt,  M game/bin/win64/panoramauiclient_strings.txt,  M game/bin/win64/physicsbuilder_strings.txt,  M game/bin/win64/resourcecompiler_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/gameinfo.gi,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/layout/citadel_db_page_hero_release_vote.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_db_page_play.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_db_page_profile.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_db_page_watch.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_db_play_menu.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_item_draft_panel.xml,  M game/citadel/pak01_dir/panorama/layout/
https://steamdb.info/patchnotes/21874470/

--- a/game/citadel/pak01_dir/panorama/layout/citadel_db_page_hero_release_vote.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_db_page_hero_release_vote.xml
@@ -29,7 +29,7 @@
 			<Panel class="PageTitle">
 				<Label text="#Citadel_HeroReleaseVote_Title" />
 			</Panel>
-			<Label class="RemainingVotes" text="#Citadel_HeroReleaseVote_RemainingVotes" html="true" />
+			<Label class="RemainingVotes" text="#Citadel_HeroReleaseVote_RemainingVotes:f" html="true" />
 			<Label class="HowToGet" text="#Citadel_HeroReleaseVote_HowToGet" html="true" />
 			<Label class="HowToGetBonus" text="#Citadel_HeroReleaseVote_HowToGetBonus" html="true" />
 		</Panel>
