--- a/game/citadel/pak01_dir/panorama/layout/citadel_db_play_menu.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_db_play_menu.xml
@@ -15,7 +15,7 @@
 						<Panel class="TextArea">
 							<Panel id="DescArea">
 								<Label id="play_matchmaking_description" text="#menu_play_matchmaking" class="playModeDesc" />
-								<Label id="play_low_priority_matchmaking_description" text="#menu_play_low_priority_matchmaking" class="playModeDesc" />
+								<Label id="play_low_priority_matchmaking_description" text="#menu_play_low_priority_matchmaking:f" class="playModeDesc" />
 							</Panel>
 							<Panel id="TitleArea">
 								<Label text="#menu_play_normal" class="playoptionLabel" />
