--- a/game/citadel/pak01_dir/panorama/layout/citadel_item_draft_panel.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_item_draft_panel.xml
@@ -37,7 +37,7 @@
 							<Label text="#Citadel_StreetBrawl_Draft_ReRoll_Btn" />
 						</Panel>
 					</Button>
-					<Label id="ReRollCount" text="#Citadel_StreetBrawl_Draft_ReRoll_Desc" />
+					<Label id="ReRollCount" text="#Citadel_StreetBrawl_Draft_ReRoll_Desc:f" />
 				</Panel>
 			</Panel>
 			<Panel id="SkipPanel" class="">
