--- a/game/citadel/pak01_dir/panorama/layout/hud_match_end.xml
+++ b/game/citadel/pak01_dir/panorama/layout/hud_match_end.xml
@@ -5,11 +5,19 @@
 		<include src="s2r://panorama/styles/hud_match_end.vcss_c" />
 	</styles>
 	<CitadelHudMatchEnd hittest="false">
-		<Panel id="MatchCompleteBG" />
-		<Panel class="Contents">
-			<Label id="TeamResultsTop" text="#Citadel_MatchDetails_Team_Results_Top" html="true" />
-			<Panel id="patron_logo" />
-			<Label id="TeamResultsBottom" text="#Citadel_MatchDetails_Team_Results_Bottom" html="true" />
+		<Panel class="MatchComplete">
+			<Panel id="MatchCompleteBG" />
+			<Panel class="Contents">
+				<Label id="TeamResultsTop" text="#Citadel_MatchDetails_Team_Results_Top" html="true" />
+				<Panel id="patron_logo" />
+				<Label id="TeamResultsBottom" text="#Citadel_MatchDetails_Team_Results_Bottom" html="true" />
+			</Panel>
+		</Panel>
+		<Panel class="MatchAbandonedDisplay">
+			<Panel class="Contents">
+				<Label class="MatchAbandonedTitle" text="#Citadel_MatchEnd_Title" />
+				<Label class="MatchAbandonedSubtitle" text="#Citadel_MatchEnd_Subtitle" />
+			</Panel>
 		</Panel>
 	</CitadelHudMatchEnd>
 </root>
