--- a/game/citadel/pak01_dir/panorama/layout/citadel_db_page_watch.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_db_page_watch.xml
@@ -31,7 +31,7 @@
 			<Panel id="MatchContainer" />
 		</Panel>
 		<Panel id="CurrentActiveMatches" class="ToggleMatchesButton">
-			<Label text="#Citadel_WatchPage_ActiveMatches" />
+			<Label text="#Citadel_WatchPage_ActiveMatches:f" />
 		</Panel>
 	</CitadelWatchPage>
 </root>
