--- a/game/citadel/pak01_dir/panorama/styles/hud_match_end.css
+++ b/game/citadel/pak01_dir/panorama/styles/hud_match_end.css
@@ -15,6 +15,18 @@ CitadelHudMatchEnd.ShowMatchEnd
 	transition-duration: 0.0s;
 }
 
+.MatchComplete
+{
+	width: 100%;
+	height: 100%;
+	opacity: 0.0;
+}
+
+.MatchFinished .MatchComplete
+{
+	opacity: 1.0;
+}
+
 #MatchCompleteBG
 {
 	width: 100%;
@@ -25,9 +37,12 @@ CitadelHudMatchEnd.ShowMatchEnd
 	ignore-parent-flow: true;
 	opacity-mask-threshold: 10% 0%;
 	opacity-mask: url("s2r://panorama/images/hud/brawl/round_complete_mask_psd.vtex");
+}
+
+.ShowMatchEnd.MatchFinished #MatchCompleteBG
+{
 	animation-name: wipeAnim;
 	animation-duration: 1s;
-	animation-iteration-count: infinite;
 	animation-iteration-count: 1;
 }
 
@@ -141,5 +156,34 @@ CitadelHudMatchEnd.ShowMatchEnd
 	background-position: center;
 	height: 170px;
 	width: 570px;
+}
+
+.MatchAbandonedDisplay
+{
+	width: 100%;
+	height: 100%;
+	background-color: #0009;
+	visibility: collapse;
+}
+
+.MatchAbandonedDisplay .MatchAbandonedTitle
+{
+	font-size: 128px;
+	font-family: oracle;
+	color: #990000;
+	text-shadow: 0px 0px 8px 5 black;
+}
+
+.MatchAbandonedDisplay .MatchAbandonedSubtitle
+{
+	font-size: 48px;
+	font-family: oracle;
+	text-shadow: 0px 0px 8px 5 black;
+	margin-top: -12px;
+}
+
+.MatchAbandoned.ShowMatchEnd .MatchAbandonedDisplay
+{
+	visibility: visible;
 }
 
