6281 | 58 files | M Protobufs/citadel_gcmessages_client.proto,  M game/bin/win64/engine2_strings.txt,  M game/bin/win64/gfsdk_aftermath_lib.x64_strings.txt,  M game/bin/win64/inputsystem_strings.txt,  M game/bin/win64/libfbxsdk_2020_3_1_strings.txt,  M game/bin/win64/networksystem_strings.txt,  M game/bin/win64/panorama_strings.txt,  M game/bin/win64/panoramauiclient_strings.txt,  M game/bin/win64/resourcecompiler_strings.txt,  M game/bin/win64/soundsystem_strings.txt,  M game/bin/win64/v8_libbase_strings.txt,  M game/bin/win64/visbuilder_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/host_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/gameinfo.gi,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/layout/hud.xml,  M game/citadel/pak01_dir/panorama/layout/settings_keybinder.xml,  M game/citadel/pak01_dir/panorama/styles/chat.css,  M game/citadel/pak01_dir/panorama/styles/citadel_base_styles.css,  M game/citadel/pak01_dir/panorama/styles/citadel_ui
https://steamdb.info/patchnotes/21891666/

--- a/game/citadel/pak01_dir/panorama/styles/citadel_base_styles.css
+++ b/game/citadel/pak01_dir/panorama/styles/citadel_base_styles.css
@@ -33,6 +33,7 @@
 @define buildsDarkerColor: #243650;
 @define buildsLightColor: #85B5FF;
 @define steamBlue: #1A9FFF;
+@define warningRed: #ee5945;
 @define colorUpgrades: #00FFFF;
 @define apCurrencyColor: #d8b8ff;
 @define team1ColorBright: #FBDCA0;
