--- a/game/citadel/pak01_dir/panorama/styles/citadel_ui_account_survey.css
+++ b/game/citadel/pak01_dir/panorama/styles/citadel_ui_account_survey.css
@@ -298,6 +298,12 @@ CitadelAccountSurvey
 	text-overflow: shrink;
 }
 
+.playAsHighlight
+{
+	color: offWhite;
+	text-decoration: underline;
+}
+
 .playtestHighlight
 {
 	color: #ff7f7f;
