--- a/game/citadel/pak01_dir/panorama/styles/hud_match_end.css
+++ b/game/citadel/pak01_dir/panorama/styles/hud_match_end.css
@@ -162,24 +162,27 @@ CitadelHudMatchEnd.ShowMatchEnd
 {
 	width: 100%;
 	height: 100%;
-	background-color: #0009;
+	background-color: #000a;
 	visibility: collapse;
 }
 
 .MatchAbandonedDisplay .MatchAbandonedTitle
 {
-	font-size: 128px;
-	font-family: oracle;
-	color: #990000;
-	text-shadow: 0px 0px 8px 5 black;
+	font-size: 88px;
+	font-family: block;
+	color: warningRed;
+	text-transform: uppercase;
+	pre-transform-rotate2d: -1.5deg;
 }
 
 .MatchAbandonedDisplay .MatchAbandonedSubtitle
 {
-	font-size: 48px;
+	font-size: 32px;
 	font-family: oracle;
-	text-shadow: 0px 0px 8px 5 black;
-	margin-top: -12px;
+	margin-top: -16px;
+	color: warningRed;
+	font-weight: bold;
+	pre-transform-rotate2d: -1.5deg;
 }
 
 .MatchAbandoned.ShowMatchEnd .MatchAbandonedDisplay
