6283 | 62 files | M game/bin/win64/engine2_strings.txt,  M game/bin/win64/resourcecompiler_strings.txt,  M game/bin/win64/soundsystem_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/cfg/valve_builds.kv3,  M game/citadel/pak01_dir/panorama/layout/ability_hud_elements/element_charges.xml,  M game/citadel/pak01_dir/panorama/layout/ability_hud_elements/element_lunging_stab.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_hud_pregame_simple.xml,  M game/citadel/pak01_dir/panorama/layout/popups/citadel_popup_hero_debut.xml,  M game/citadel/pak01_dir/panorama/layout/popups/citadel_popup_roster_select.xml,  M game/citadel/pak01_dir/panorama/layout/popups/popup_settings.xml,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_synth.css,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_charges.css,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_lunging_
https://steamdb.info/patchnotes/21909877/

--- a/game/citadel/pak01_dir/panorama/layout/citadel_hud_pregame_simple.xml
+++ b/game/citadel/pak01_dir/panorama/layout/citadel_hud_pregame_simple.xml
@@ -11,6 +11,7 @@
 			<Panel class="HeroInfo">
 				<Label class="HeroRevealLabel" text="#Citadel_MatchIntro_HeroReveal" />
 				<CitadelHeroLogo id="HeroLogo" />
+				<CitadelHeroAbilities id="HeroAbilities" />
 			</Panel>
 		</Panel>
 	</CitadelHudPregameSimple>
