--- a/game/citadel/pak01_dir/panorama/styles/ability_property_icons.css
+++ b/game/citadel/pak01_dir/panorama/styles/ability_property_icons.css
@@ -123,6 +123,7 @@
 .prop_cast.AbilityPropertyIcon,.prop_cast .ImportantStatImage
 {
 	background-image: url("s2r://panorama/images/upgrades/property_cast_psd.vtex");
+	wash-color: spiritBrightColor;
 }
 
 .StatDesc_TechRange,.prop_distance.AbilityPropertyIcon,.prop_distance .ImportantStatImage
