--- a/game/citadel/pak01_dir/panorama/styles/post_game/citadel_db_post_game_progress_mvp.css
+++ b/game/citadel/pak01_dir/panorama/styles/post_game/citadel_db_post_game_progress_mvp.css
@@ -32,7 +32,8 @@ CitadelPostGameProgressMVP
 
 .MVPHeroContainer #MVPHeroScenePanel
 {
-	width: 1900px;
+	width: 100%;
+	max-width: 1920px;
 	height: 100%;
 	horizontal-align: right;
 	margin-right: -100px;
