--- a/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_synth.css
+++ b/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_synth.css
@@ -40,9 +40,48 @@
 	background-color: gold;
 }
 
-.SplitLabelProgressBar
+.Debuff .SplitLabelProgressBar
 {
 	ui-scale: 180%;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelName Image
+{
+	animation-name: AfflictedAnim;
+	animation-duration: 0.2s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+	animation-frame-time: 200ms;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelName Image:nth-child(5n)
+{
+	animation-direction: alternate-reverse;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+1)
+{
+	animation-direction: alternate;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+2)
+{
+	animation-direction: alternate-reverse;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+3)
+{
+	animation-direction: alternate;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelName Image:nth-child(5n+4)
+{
+	animation-direction: alternate-reverse;
+}
+
+.Debuff .SplitLabelProgressBar .SplitLabelProgress
+{
+	wash-color: synthColor;
 }
 
 .SplitLabelProgressBar .SplitLabelName Image
