--- a/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_lunging_stab.css
+++ b/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_lunging_stab.css
@@ -43,12 +43,12 @@
 {
 	width: 100%;
 	height: 100%;
-	opacity: 0.0001;
+	visibility: collapse;
 }
 
 .active #cast
 {
-	opacity: 1.0;
+	visibility: visible;
 }
 
 #center_circle
@@ -56,9 +56,15 @@
 	vertical-align: center;
 	horizontal-align: center;
 	opacity: 0.2;
-	width: 50px;
-	height: 50px;
-	border: 6px;
+	width: 60px;
+	height: 60px;
+	border: 10px;
+}
+
+#center_circle.perfect_window
+{
+	border-color: #6dffb1;
+	opacity: 0.5;
 }
 
 #large_circle
@@ -68,27 +74,5 @@
 	width: sizeLarge;
 	height: sizeLarge;
 	border: 5px;
-}
-
-.active #large_circle
-{
-	animation-name: ScaleCircle;
-	animation-duration: 1.25s;
-	animation-iteration-count: 1;
-	animation-fill-mode: forwards;
-}
-
-@keyframes 'ScaleCircle'
-{
-	0%
-	{
-		pre-transform-scale2d: 1.0;
-	}
-	
-	100%
-	{
-		pre-transform-scale2d: 0.0;
-	}
-	
 }
 
